welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:77: error: value ! is not a member of Int
while ( k! = 16 ) {
         ^